# human_control_modeling

./: 2dnn_narmax.py  MLP.py  MLP_narmax.py  armax_forecasting.m  bag_analyze.py  create_dataset.py  create_dataset_xy.py  dataframe.csv  dataframe.pkl  delay_est.py  identification.py  linear_regression.py  model_10xl_MSE_sum.pkl  narmax.py  narmax3_pk2pk_2108.pkl  narmax_frols.py  narmax_poly5_0906.pkl  net5_narmax10_xy_tr50_summary.pkl  net5_narmax10_xy_tr50_summary_cpu.pkl  peak-to-peak_nn.py  plot_data.py  xai.py
custom_position_controller/: CMakeLists.txt  custom_position_controller_plugin.xml  package.xml
custom_position_controller/config/: controllers.yaml
custom_position_controller/include/: custom_position_controller.h
custom_position_controller/launch/: custom_position_controller.launch
custom_position_controller/msg/: enable_command.msg
custom_position_controller/src/: bag_simulator.py  bag_viewer.py  custom_position_controller.cpp  human_estimator.py
custom_position_controller/urdf/: comau_ns16hand.xacro  comau_ns16hand_macro.xacro
frols_tests/: narmax3_fourier3_ls_aic_lr-3_1506.pkl  narmax3_fourier3_ls_aic_lr-3_COMPLETE_1506.pkl  narmax3_fourier3_ls_bic_lr-3_1506.pkl  narmax3_fourier3_ls_bic_lr-3_COMPLETE_1506.pkl  narmax3_fourier3_ls_bic_lr-3_raw_1506.pkl  narmax3_fourier3_ls_bic_lr-3_raw_COMPLETE_1506.pkl  narmax3_poly3_ls_bic_1306.pkl  narmax3_poly3_ls_bic_2608.pkl  narmax3_poly4_ls_bic_1306.pkl  narmax3_poly4_nlms_bic_1306.pkl  narmax3_poly4_rls_aic_1306.pkl  narmax3_poly4_rls_bic_1306.pkl  narmax3_poly4_rls_bic_lr-3_raw_1506.pkl  (+41 more)
(+39 files in other folders)
