<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custom_position_controller</name>
  <version>0.18.1</version>
  <description>custom_position_controller</description>

  <maintainer email="adriano.scibilia@stiima.cnr">Adriano Scibilia</maintainer>

  <license>BSD</license>

  <author>Adriano Scibilia</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>control_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>rosdyn_core</depend>
  <depend>comau_hw_interface</depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>forward_command_controller</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>forward_command_controller</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>cnr_logger</depend>

  <export>
    <controller_interface plugin="${prefix}/custom_position_controller_plugin.xml"/>
  </export>
</package>
